# tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.changeset/: bounded-fetch-shell-output.md  config.json  harness-tool-hardening.md  initial-release.md  multi-edit-tool-name.md  websearch-pi-extension.md  websearch-self-contained.md
.github/workflows/: ci.yml  release-rust.yml  release.yml
agent-knowledge/: AGENTS.md  agent-read-tool.md  agent-search-tools.md  agent-tool-use-methods.md  agent-write-across-ecosystems.md  agent-write-edit-tools.md  ai-agent-harness-tooling.md  exec-tool-design-across-harnesses.md  glob-impl-and-prompts-in-major-tools.md  harness-tool-surface-audit.md  lsp-tool-design-across-harnesses.md  self-contained-websearch-backends.md  skill-tool-design-across-harnesses.md  skill-tool-in-autonomous-agents.md  testing-harness-tools.md  webfetch-tool-design-across-harnesses.md
agent-knowledge/design/: bash.md  glob.md  grep.md  lsp.md  read.md  skill.md  webfetch.md  websearch.md  write.md
agent-knowledge/resources/: agent-read-tool-sources.json  agent-search-tools-sources.json  agent-tool-use-methods-sources.json  agent-write-across-ecosystems-sources.json  agent-write-edit-tools-sources.json  ai-agent-harness-tooling-sources.json  exec-tool-design-across-harnesses-sources.json  glob-impl-and-prompts-in-major-tools-sources.json  harness-tool-surface-audit-sources.json  lsp-tool-design-across-harnesses-sources.json  skill-tool-design-across-harnesses-sources.json  skill-tool-in-autonomous-agents-sources.json  testing-harness-tools-sources.json  webfetch-tool-design-across-harnesses-sources.json
crates/bash/: Cargo.toml  README.md
crates/bash/src/: constants.rs  executor.rs  fence.rs  format.rs  lib.rs  run.rs  schema.rs  types.rs
crates/bash/tests/: bash.rs
crates/batch/: Cargo.toml
crates/batch/src/: lib.rs  run.rs  schema.rs
crates/glob/: Cargo.toml  README.md
crates/glob/src/: constants.rs  engine.rs  fence.rs  format.rs  lib.rs  run.rs  schema.rs  suggest.rs  types.rs
crates/glob/tests/: glob.rs
crates/grep/: Cargo.toml  README.md
crates/grep/src/: constants.rs  engine.rs  fence.rs  format.rs  lib.rs  run.rs  schema.rs  suggest.rs  types.rs
crates/grep/tests/: grep.rs
crates/harness-core/: Cargo.toml  README.md
crates/harness-core/src/: errors.rs  lib.rs  permissions.rs
crates/harness-tools/: Cargo.toml  README.md
crates/harness-tools/src/: lib.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: constants.rs  fence.rs  format.rs  lib.rs  manifest.rs  run.rs  schema.rs  spawn_client.rs  stub_client.rs  types.rs
crates/lsp/tests/: lsp.rs
crates/read/: Cargo.toml  README.md
crates/read/src/: binary.rs  constants.rs  fence.rs  format.rs  lib.rs  lines.rs  run.rs  schema.rs  suggest.rs  types.rs
crates/read/tests/: read.rs
crates/skill/: Cargo.toml  README.md
crates/skill/src/: constants.rs  fence.rs  format.rs  frontmatter.rs  lib.rs  registry.rs  run.rs  schema.rs  substitute.rs  suggest.rs  types.rs
crates/skill/tests/: skill.rs
crates/webfetch/: Cargo.toml  README.md
crates/webfetch/src/: constants.rs  engine.rs  extractor.rs  fence.rs  format.rs  lib.rs  run.rs  schema.rs  ssrf.rs  types.rs
crates/webfetch/tests/: webfetch.rs
crates/websearch/: Cargo.toml  README.md
crates/websearch/src/: constants.rs  engine.rs  fence.rs  format.rs  lib.rs  run.rs  schema.rs  ssrf.rs  types.rs
crates/websearch/src/engines/: brave.rs  dedupe.rs  fallback.rs  html.rs  http.rs  marginalia.rs  mod.rs  mojeek.rs  rank.rs  tavily.rs  wikipedia.rs
crates/websearch/tests/: engines.rs  websearch.rs
crates/websearch/tests/fixtures/: marginalia.json  wikipedia.json
crates/write/: Cargo.toml  README.md
crates/write/src/: constants.rs  diff.rs  engine.rs  fence.rs  format.rs  ledger.rs  levenshtein.rs  lib.rs  matching.rs  normalize.rs  run.rs  schema.rs  types.rs
crates/write/tests/: cli.rs  write.rs
docs/: session-feedback-2026-06-05.md
