[package]
name = "harness-bash"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bash tool for AI agent harnesses — autonomous shell execution with tokio process management, cwd-carry, inactivity timeout, head+tail spill, background jobs"
repository.workspace = true
homepage = "https://github.com/avifenesh/tools/tree/main/crates/bash#readme"
documentation = "https://docs.rs/harness-bash"
readme = "README.md"
keywords = ["ai", "agent", "llm", "shell", "subprocess"]
categories = ["api-bindings", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "harness-bash-cli"
path = "src/bin/cli.rs"

[dependencies]
harness-core = { path = "../harness-core", version = "0.1.0" }

anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "process", "signal", "sync", "time", "fs"] }

[dev-dependencies]
tempfile.workspace = true
