[package]
name = "harness-batch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Batch tool for AI agent harnesses — run shell commands across multiple directories with sequential/parallel modes, workspace fencing via realpath canonicalization, fail-fast, and per-target timeout"
repository.workspace = true
homepage = "https://github.com/avifenesh/tools/tree/main/crates/batch#readme"
documentation = "https://docs.rs/harness-batch"

[dependencies]
harness-core = { path = "../harness-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
glob = "0.3"
regex = "1"
