[package]
name = "harness-grep"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grep tool for AI agent harnesses — ripgrep-library content search with structured output modes, .gitignore respect, alias pushback, and fuzzy NOT_FOUND siblings"
repository.workspace = true
homepage = "https://github.com/avifenesh/tools/tree/main/crates/grep#readme"
documentation = "https://docs.rs/harness-grep"
readme = "README.md"
keywords = ["ai", "agent", "llm", "ripgrep", "search"]
categories = ["api-bindings", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "harness-grep-cli"
path = "src/bin/cli.rs"

[dependencies]
harness-core = { path = "../harness-core", version = "0.1.0" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

grep.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
