[package]
name = "harness-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared types and traits for @agent-sh/harness-* Rust tools: ToolError, PermissionPolicy, ReadOperations"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
