[package]
name = "harness-tools"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Umbrella re-export for harness-* AI agent tools: core, read, write, grep, glob, bash, webfetch, lsp, skill"
homepage = "https://github.com/avifenesh/tools/tree/main/crates/harness-tools#readme"
documentation = "https://docs.rs/harness-tools"
readme = "README.md"
keywords = ["ai", "agent", "llm", "tool-use", "harness"]
categories = ["api-bindings", "development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
harness-core = { path = "../harness-core", version = "0.1.0" }
harness-read = { path = "../read", version = "0.1.1" }
harness-write = { path = "../write", version = "0.1.1" }
harness-grep = { path = "../grep", version = "0.1.1" }
harness-glob = { path = "../glob", version = "0.1.1" }
harness-bash = { path = "../bash", version = "0.1.1" }
harness-webfetch = { path = "../webfetch", version = "0.1.0" }
harness-lsp = { path = "../lsp", version = "0.1.1" }
harness-skill = { path = "../skill", version = "0.1.0" }
