[package]
name = "harness-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LSP tool for AI agent harnesses — language-server-protocol operations (hover, definition, references, symbols) with manifest, lazy-spawn policy, pluggable client adapter"

[lib]
path = "src/lib.rs"

[[bin]]
name = "harness-lsp-cli"
path = "src/bin/cli.rs"

[dependencies]
harness-core = { path = "../harness-core" }

anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "process", "fs", "sync", "time"] }
url = "2"
lsp-types = "0.97"

[dev-dependencies]
tempfile.workspace = true
