[package]
name = "harness-read"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Read tool for AI agent harnesses — filesystem read with pagination, binary sniff, directory listing, attachment shape, NOT_FOUND fuzzy siblings"
repository.workspace = true
homepage = "https://github.com/avifenesh/tools/tree/main/crates/read#readme"
documentation = "https://docs.rs/harness-read"
readme = "README.md"
keywords = ["ai", "agent", "llm", "filesystem", "tool-use"]
categories = ["api-bindings", "filesystem"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "harness-read-cli"
path = "src/bin/cli.rs"

[dependencies]
harness-core = { path = "../harness-core", version = "0.1.0" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
