[package]
name = "harness-skill"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Skill tool for AI agent harnesses — authored SKILL.md activation with progressive disclosure, permission-gated activation, trust-gated project skills, and pluggable SkillRegistry"

[lib]
path = "src/lib.rs"

[[bin]]
name = "harness-skill-cli"
path = "src/bin/cli.rs"

[dependencies]
harness-core = { path = "../harness-core", version = "0.1.0" }

anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync"] }
globset.workspace = true

[dev-dependencies]
tempfile.workspace = true
